tests/js_error/source_locations/expression/binary/in.exp
TypeError: right side of 'in' must be an object
  ┌ tests/js_error/source_locations/expression/binary/in.js:1:3
  |
1 | 1 in null
  |   ^
Stack:
  at <global> (tests/js_error/source_locations/expression/binary/in.js:1:3)